kubernetes-security/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  my-deploy
  namespace: homework
  labels:
    app: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  myapp
    spec:
      serviceAccountName: monitoring
      containers:
      - name:  web-server
        image:  nginx:1.20
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort:  8000
        volumeMounts:
          - name: homework-volume
            mountPath: "/homework"
          - name: nginx-config-volume
            mountPath: /etc/nginx/conf.d/
          - name: myapp-configmap
            mountPath: "/homework/conf"
      volumes:
        - name: homework-volume
          persistentVolumeClaim:
            claimName: pvc-myapp
        - name: nginx-config-volume
          configMap:
            name: nginx-conf
        - name: myapp-configmap
          configMap:
            name: myapp-configmap
      nodeSelector:
        homework: "true"
      restartPolicy: Always
...
