kubernetes-security/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-myapp
  namespace: homework
spec:
  selector:
    app: myapp
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: myapp-port
    protocol: TCP
    port: 80
    targetPort: 8000
...
