kubernetes-security/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /homepage
#    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ingress-myapp
  namespace: homework
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-myapp
            port:
              number: 80
...
